<resources>
    <string name="app_name">Spotify Share App</string>
    <string name="warning_need_agreement">You need to agree to the authentication statement.</string>
    <string name="token">Access Token: %1$s</string>
    <string name="authentication_prompt">To access the analytics features provided with this app, you are required to authenticate with the Spotify API. You may authenticate with the Spotify API through the Spotify application, if it is installed locally on your Android device, or you may authenticate through a WebView provided. If you are not already logged into your Spotify account, you will be required to enter your Spotify login credentials and accept the supplied scopes. \n \nBy authenticating with the Spotify API, you acknowledge that we do not share your data with third party sources, and only store data that is relevant to the scope of analytical results provided. Please also note that on-demand playback requires a Spotify premium account or an Android tablet which supports this feature. </string>
    <string name="authenticate_button_text">Authenticate</string>
    <string name="checkbox_text">I Agree</string>
    <string name="warning_need_token">A network error has occurred. Please try again.</string>
    <string name="authentication_prompt_title">Privacy Statement:</string>
    <string name="progress_message">Requesting access token...</string>

    <!-- labels for each of the user input fields -->
    <string name="type">Type*</string>
    <string name="timeRange">Time Range</string>
    <string name="limit">Limit</string>
    <string name="offset">Offset</string>

    <!-- prompts for type and time range spinners -->
    <string name="type_prompt">Type</string>
    <string name="time_range_prompt">Time Range</string>

    <string name="submit_button_text">Submit</string>
    <string name="action_refresh">Refresh</string>

    <!-- dynamic headers for MostPopularActivity -->
    <string name="most_popular_header">Top Artists and Tracks</string>
    <string name="top_artists_header">Top Artists</string>
    <string name="top_tracks_header">Top Tracks</string>

    <string name="enter_a_limit">1 - 50</string>
    <string name="enter_an_offset">0</string>
    <string name="track_name_placeholder">Track Name</string>
    <string name="track_artist_placeholder">Track Artist</string>
    <string name="listen_button">Listen</string>
    <string name="share_button">Share</string>
    <string name="artist_name_placeholder">Artist Name</string>
    <string name="artist_followers_placeholder">Artist Followers</string>
    <string name="follower_count"> Followers</string>
    <string name="track_ranking">#</string>
    <string name="track_year_placeholder">Track Year</string>
    <string name="default_action_bar_title">Share App</string>
    <string name="action_logout">Logout</string>

    <!-- tooltip text for each of the user input fields -->
    <string name="type_tooltip_text">The type of entity to return. Valid values: artists or tracks.</string>
    <string name="time_range_tooltip_text">Over what time frame the affinities are computed. Valid values: long term (calculated from several years of data and including all new data as it becomes available), medium term (approximately last 6 months), short term (approximately last 4 weeks). Default: medium term.</string>
    <string name="limit_tooltip_text">The number of entities to return. Default: 20. Minimum: 1. Maximum: 50.</string>
    <string name="offset_tooltip_text">The index of the first entity to return. Default: 0 (i.e. the first track).</string>
    <string name="popularity_number_placeholder">0.0</string>
    <string name="track_item_number_placeholder">1</string>
    <string name="spinner_item_dropdown_placeholder">None</string>
    <string name="seekBarTimeStamp">0:00</string>

</resources>
