<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_most_popular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MostPopularActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/spotify_logo_most_popular"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_spotify_logo"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/spotify_logo_most_popular"
            android:background="#D3D3D3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <!-- label for query type -->
                    <TextView
                        android:id = "@+id/typeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="#1E1E1E"/>

                    <!-- selects type (album or track) to filter the query results -->
                    <Spinner
                        android:id="@+id/typeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:entries="@array/type_array"
                        android:prompt="@string/type_prompt"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <!-- label for query time range -->
                    <TextView
                        android:id = "@+id/timeRangeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeRange"
                        android:textColor="#1E1E1E"/>

                    <!-- selects time range from which to query results -->
                    <Spinner
                        android:id="@+id/timeRangeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:entries="@array/time_range_array"
                        android:prompt="@string/time_range_prompt"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <!-- label for query limit -->
                    <TextView
                        android:id = "@+id/limitLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/limit"
                        android:textColor="#1E1E1E"/>

                    <!-- limits the query results by a user defined quantity -->
                    <EditText
                        android:id="@+id/limitEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_a_limit"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">

                    <!-- label for query offset -->
                    <TextView
                        android:id = "@+id/offsetLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offset"
                        android:textColor="#1E1E1E"/>

                    <EditText
                        android:id="@+id/offsetEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_an_offset"
                        android:inputType="number"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
<!--
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.spotifyauthentication.Activities.MostPopularActivity">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>
-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/response_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="Line 1\nLine 2\nLine 3" />

        </ScrollView>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:text="@string/submit_button_text"/>

        <TextView
            android:id="@+id/accessToken"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="access token"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>