<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_margin="10dp"
        tools:context="com.example.spotifyauthentication.Activities.TrackDetailActivity">

        <ImageView
            android:id="@+id/artist_detail_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true" />

        <RelativeLayout
            android:id="@+id/artist_detail_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/artist_detail_image"
            android:layout_alignTop="@+id/artist_detail_image"
            android:layout_alignBottom="@+id/artist_detail_image"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/artist_detail_name"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:text="@string/artist_name_placeholder"
                android:textColor="@android:color/black"
                android:alpha=".87"/>

            <TextView
                android:id="@+id/artist_detail_followers"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/artist_detail_name"
                android:layout_marginBottom="5dp"
                android:layout_alignStart="@+id/artist_detail_name"
                android:text="@string/artist_followers_placeholder"
                android:textColor="@android:color/black"
                android:alpha=".60"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignTop="@+id/artist_detail_followers"
                android:layout_alignBottom="@+id/artist_detail_followers"
                android:layout_alignParentEnd="true">

                <RatingBar
                    android:id="@+id/artist_detail_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    style="?android:attr/ratingBarStyleSmall"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/line_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/artist_detail_info"
            android:layout_marginTop="15dp"
            android:background="#D3D3D3"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/line_separator">

            <Button
                android:id="@+id/share_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/white_rounded_button"
                android:drawableStart="@drawable/ic_share"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:gravity="center"
                android:textColor="#656565"
                android:textSize="15sp"
                android:text="@string/share_button"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>